// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList 1`] = `
<div>
  <input
    name="taglist[Paris]"
    type="hidden"
    value="paris"
  />
  <div
    onClick={[Function]}
  >
    <span
      onClick={[Function]}
    >
      Paris
    </span>
  </div>
</div>
`;

exports[`TagList custom Tag 1`] = `
<div>
  <input
    name="taglist[Paris]"
    type="hidden"
    value="paris"
  />
  <div
    onClick={[Function]}
  >
    <div />
  </div>
</div>
`;
